# sudoku-solver

./: LICENSE  README.md  cabal.config  stack.yaml  sudoku-solver.cabal
app/: Main.hs
src/: Attempt.hs  Display.hs  Lib.hs  Puzzle.hs  Solution.hs  Sudoku.hs  UI.hs
test/: Spec.hs
