name:                sudoku-solver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sudoku-solver#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Holmes
maintainer:          daniel@danielholmes.org
copyright:           2017 Daniel Holmes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Puzzle
                     , Attempt
                     , Display
                     , Solution
  other-modules:       UI
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal >= 0.6.3.1 && < 1
                     , split >= 0.2.3.2 && < 1
                     , Unique >= 0.4.7.1 && < 1
                     , containers >= 0.5.10.2 && < 1
                     , syb >= 0.7 && < 1
  default-language:    Haskell2010

executable sudoku-solver-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sudoku-solver
  default-language:    Haskell2010

test-suite sudoku-solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sudoku-solver
                     , containers >= 0.5.10.2 && < 1
                     , hspec >= 2.4.3 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sudoku-solver
